poppr 2.7.0
============

NEW FUNCTION
------------

* `make_haplotypes()` will split your data into pseudo-haplotypes for use in
  AMOVA-like analyses. This was a previously internal function, but has been 
  promoted to a user-facing function in this version. 

ALGORITHMIC CHANGE
------------

* AMOVA will now default to using euclidean distance. This affects all 
  calculations made with `within = FALSE` or `filter = TRUE` without a 
  user-supplied distance. This will not have affect those with haploid or 
  diploid data using `within = TRUE`. The dissimilarity distance is equivalent 
  to a squared euclidean distance for haploid genotypes, but not for any higher 
  ploidy. Those using `filter = TRUE` without specifying a distance should use
  a euclidean threshold. This should not be an issue for those who simply want
  to group isolates with missing data, however as a zero distance is the same
  for euclidean and dissimilarity. Thanks goes to Patrick Meirmans for alerting
  me to this error.


NEW FEATURES
------------

* AMOVA will now calculate within-individual variance for polyploid data.

poppr 2.6.1
===========

BUG FIX
-------

* An out-of-bounds memory access error in `bitwise.dist()` was fixed.
  See https://github.com/grunwaldlab/poppr/issues/169 for details.

poppr 2.6.0
===========

NEW FUNCTIONS
-------------

* The new function `boot.ia()` is conceptually similar to `resample.ia()`,
  except it resamples with replacement. 
  
NEW FEATURES
------------

* The function `resample.ia()` now can resample individuals weighted by their
  Psex value. 
* The minimum spanning networks will now scale nodes by area instead of radius.
  This gives a more accurate picture of the differences between MLGs. See
  https://github.com/grunwaldlab/poppr/issues/154 for details.
* A legend for samples/node is now added to all minimum spanning networks. See
  https://github.com/grunwaldlab/poppr/issues/158 for details.