@@ -19,6 +19,7 @@ export("mll<-")
 export("visible<-")
 export(MLG2df)
 export(aboot)
+export(as.genambig)
 export(as.genclone)
 export(as.snpclone)
 export(bitwise.dist)
@@ -103,6 +104,7 @@ exportClasses(bruvomat)
 exportClasses(genclone)
 exportClasses(snpclone)
 exportMethods("levels<-")
+exportMethods(as.genambig)
 exportMethods(duplicated)
 exportMethods(levels)
 exportMethods(print)
